--- a/week-01/kwak-soona/index.html
+++ b/week-01/kwak-soona/index.html
@@ -10,11 +10,20 @@
 	<body>
 
 	<h1>About Me</h1>
-		<img src="questions.png" alt="cartoon" width ="300" height="300"/>
+		<div class = "intro-pic">
+			<img src="questions.png" alt="cartoon" width ="300" height="300"/>
+		</div>
+	<div id ="container">
+		
+		<div class = "intro">
 			<p>Studied Marketing and Classical Civilization before.<br>
 			During my free time, love to read books, play video games,
 			play with my dog and write.</p>
 			<p>More info to be added.......</p>
+		</div>
+	</div>
+
+
 						
 	</body>
 
