--- a/week-01/mun-soeun/index.html
+++ b/week-01/mun-soeun/index.html
@@ -18,7 +18,7 @@
 		<h3> My Hobbies </h3>
 		<img id = "hobby_pic" src="hobby-pic.jpeg" alt="hobby">
 		<div id = "hobby">	
-			<p> My Top 5 Hobby List </p>
+			<p id = "list-title"> My Top 5 Hobby List </p>
 			<ol>
 				<li> Find new amazing dessert shops</li>
 				<li> Watch cool movies, dramas, etc.</li>
