--- a/week-01/sexton-alison/index.html
+++ b/week-01/sexton-alison/index.html
@@ -1,40 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<title>Alison Sexton</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
-<link href='http://fonts.googleapis.com/css?family=Vidaloka' rel='stylesheet' type='text/css'>
-</head>
-<body>
-	<div id=header>
-		<img src="absexton.png" alt="absextonlogo">
-	</div>
-	<div id=nav-bar>
-			<nav> 
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a>
-					</li>	
-					<li><a href="portfolio.html">Portfolio</a>
-					<li><a href="http://urbanbeta.ca" target="_blank">Blog</a></li>
-				</ul>
-			</nav>
-	</div>
-	<div id=home-page-content>
-		<div id=welcome-photo>
-			<img src="welcome.jpg" alt="AB Sexton Welcome Photo">
-		</div>
-		<div id=home-text>
-			<p>Web Communications.</p>
-			<p>Building a link between design & development</p>
-		</div>
-</div>
-	<div id=footer>
-		<div id=footer-img>
-			<img src="absignature.png" alt="AB Sexton Signature">
-		</div>
-		<p>AB Sexton copyright &copy; 2014. All rights reserved.</p>
-	</div>
+
+  <head>
+    <title>Alison Sexton</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+ <body>
+  <header id="header">
+    <img src="header.png">
+  </header>
+  <nav id="nav-bar"
+      <ul>
+        <li><a href="contact.html">CONTACT</a>
+        <li><a href="portfolio.html">PORTFOLIO</a>
+        <li><a href="about.html">ABOUT</a>
+        <li><a href="index.html">HOME</a></li>
+      </ul>
+  </nav>
+  <article id="content">
+    <div id ="text">
+        <h1>About Me</h1>
+          <p>I'm passionate about creating a link between web design and development. A one-stop-shop to create a user  friendly simplistic web site. Web sites today are the face of your company. I specialize in   communicating your brand through your online presence. Based out of Toronto, I studied at Ryerson University and George Brown College. I have a strong background in customer service and strive to represents the needs of my clients and the user. I have a knack for problem solving, and not just on the computer but in my free time as a rock climber.</p>
+    </div>
+      <div id="welcome-image">
+        <img src="alison.jpg">
+      </div>
+      <img id="mobile-img" src="alisonmobile.jpg">
+  </article>
+  <footer id="footer">
+    <p>AB Sexton copyright &copy; 2014. All rights reserved.</p>
+  </div>
 </body>
 </html>
