I've updated my files

--- a/week-01/Trejo-Jesus/index.html
+++ b/week-01/Trejo-Jesus/index.html
@@ -2,46 +2,29 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="styles/main.css">
-<!--<style>
 
 
-@charset "utf-8";
 
-@import url(http://fonts.googleapis.com/css?family=Antic+Slab);
 
-body {
- background-color: #999;
- font-family: 'Antic Slab', serif;
- font-size: 15px;
- color: #000;
-}
-
-h1 {
- font-size: 30px; 
- font-weight: bold;
- background-color: #fff;
-}
-
-p {font-size: 15px
-    line-height: 20px}
-			.main.container {
-				padding: 50px 0;
-			}
-			.profile-pic img {
-				border-radius: 100%;
-			float: ;
-			}
-		</style > -->
 </head>
-<title>Testing</title>
+<title>My First Page</title>
 <div class = "container">
 <h1>Jesus Trejo</h1>
-<p> Hi my Name Is Jesus, I'm a graphic designer from Venezuela <br />
+<div class="para">
+<p> Hi my Name Is Jesus, I'm a graphic designer from Venezuela. <br />
 Currently working for a private school <br />
-Looking forward to a career change in Web Development</p>
+My main expertise involves print design but i'm
+looking forward to a career change in Web Development</p></div>
 <div class="img">
-					<img src="images/me.jpg">
-				</div>
+<img src="images/me.jpg">
+</div>
+
+<div class="twitt">
+					
+				<a class="twitter-timeline" href="https://twitter.com/ageekybear" data-widget-id="448616575847759872">Tweets by @ageekybear</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+</div>
 
 
 </div>
