--- a/week-02/tennant-calvin/in-class.html
+++ b/week-02/tennant-calvin/in-class.html
@@ -27,21 +27,30 @@
 			color: #663399;
 			text-shadow: 1px 1px 1px #330066;
 			}
+			p{
+			font-family:'Georgia', Tahoma;
+			font-weight: bold;
+			}
 			.insta-photos {
 			text-align:center;
 			padding: 20px;
 			margin: auto;
 			float: left;
 			}
+			textarea {
+			width: 650px;
+			height: 100px;
+			padding: 10px;
+			margin: auto;
 		</style>
 	</head>
 	<body>
 		<h1> Hi! Welcome to instagram photos! </h1>
 		<div class= "insta-photos"></div>
-		<p> So, what do you think of these photos?</p>
+		<p> So, what do you think of these photos? Please share what you think.</p>
 		<form> 
-		<textarea name="comments"> </textarea>
-		<input type="submit" value = "Comment it!">
+			<textarea name="comments"> </textarea>
+			<input type="submit" value = "Comment it!">
 		
 		</form>
 		
