--- a/week-02/Gonzalez-Ada/index.html
+++ b/week-02/Gonzalez-Ada/index.html
@@ -21,7 +21,7 @@ $.ajax({
 });
 </script>
 </head>
-<body bgcolor="#E6E6FA">
+<body bgcolor="#E6E6FA" width:"640px">
 	<div class="insta-photos" align="center"></div>
 	
 	
