--- a/week-02/grace-alma/index.html
+++ b/week-02/grace-alma/index.html
@@ -1,35 +1,35 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Testing!</title>
+		<title>Alma Grace</title>
+		<link rel="stylesheet" type="text/css" href="stylesheet1.css">
+	</head>
 
-		<style>
-
-		</style>
+		
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js">	</script>
 		<script type="text/javascript">
 		$.ajax({
 			type: 'GET',
 			dataType: 'jsonp',
-			url: 'https://api.instagram.com/v1/users/230199680/media/recent?client_id=585d00be2af34a26b0e1caa6995cf19f',
-			success: function(response) {
+			url: 'https://api.instagram.com/v1/media/popular?client_id=585d00be2af34a26b0e1caa6995cf19f',
+			success: function(response){
+
 			console.log(response);
-			response.data.forEach(function(photo) {
+			response.data.forEach(function(photo){
 			console.log(photo);
 			console.log(photo.link);
 			$('.insta-photos').append(
-			'<a href="' + photo.link + '"><img src="' +photo.images.standard_resolution.url+ '"></a>');
-			
+			'<a href=" ' +photo.link +'"><img src=" ' + photo.images.low_resolution.url + ' "></a>'	);
 			});
-			
 			},
+
 			});
 			
 			</script>
 	</head>
 
 		<body>
-		<h1> My photos </h1>
+		<h1>Instagram Pictures</h1>
 			<div class="insta-photos"></div>
 			<p>Thanks for taking a look!</p>
 			
