--- a/week-02/grace-alma/index.html
+++ b/week-02/grace-alma/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Alma Grace</title>
+		<title>Alma Grace Instagram Project</title>
 		<link rel="stylesheet" type="text/css" href="stylesheet1.css">
-	</head>
+
 
 		
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js">	</script>
@@ -25,13 +25,13 @@
 
 			});
 			
-			</script>
+		</script>
 	</head>
 
 		<body>
 		<h1>Instagram Pictures</h1>
 			<div class="insta-photos"></div>
-			<p>Thanks for taking a look!</p>
+			<p id="thanks" >Thanks for taking a look! Alma Grace</p>
 			
 		</body>
 		
