--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -23,6 +23,11 @@
 				},
 			});
 		</script>
+		<style>
+			.insta-photos {
+				background: #484848;
+			}
+			</style>
 	</head>
 	<body>
 		<p>Hello everyone!</p>
