--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -11,10 +11,10 @@
 				success: function(response) {
 					console.log(response);
 					response.data.forEach(function(media) {
-				/*	console.log(photo);	
+					console.log(photo);	
 					console.log(photo.link);
 					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
-					response.data.forEach(function(media) { */
+					response.data.forEach(function(media) { 
 						var html = '';
 						html += '<img src="';
 						html += media.images.standard_resolution.url;
