--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -13,7 +13,7 @@
 					response.data.forEach(function(photo) {
 					console.log(photo);	
 					console.log(photo.link);
-					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
+					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + ' width='42' height='42'"></a>');
 					
 				});
 				},
