--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -22,7 +22,10 @@
 			.insta-photos {
 				background: #484848;
 			}
-			
+			.insta-photos img {
+				width: 42px;
+				height: auto;
+			}
 		</style>
 	</head>
 	<body>
