--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -20,11 +20,12 @@
 		</script>
 		<style>
 			.insta-photos {
+				width: 50px;
 				background: #484848;
 			}
-			.insta-photos img {
-				width: 42px;
-				height: auto;
+			body {
+				width: 100%;
+				background: white;
 			}
 		</style>
 	</head>
