--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -13,15 +13,15 @@
 					response.data.forEach(function(photo) {
 					console.log(photo);	
 					console.log(photo.link);
-					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
+					//$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
 				});
 				},
 			});
 		</script>
 		<style>
 			.insta-photos {
-				width: 50px;
 				background: #484848;
+				background-size: 50px;
 			}
 			body {
 				width: 100%;
