--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -19,13 +19,9 @@
 			});
 		</script>
 		<style>
-			.insta-photos {
-				background: #484848;
-				background-size: 50px;
-			}
 			body {
 				width: 100%;
-				background: white;
+				background: grey;
 			}
 		</style>
 	</head>
