--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -23,6 +23,10 @@
 				width: 100%;
 				background: grey;
 			}
+			img {
+				width: 20px;
+				height: auto;
+			}
 		</style>
 	</head>
 	<body>
