--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -23,7 +23,28 @@
 				width: 100%;
 				background: grey;
 			}
-			
+			.insta-photos{
+			padding: 5px;
+			overflow:hidden;
+			position: relative;
+			top: 5px;
+
+			}
+
+
+
+		.insta-photos img{
+			width:200px;
+			height: 142px;
+			display:inline-block;
+			padding: 15px;
+			margin-top; 15px;
+			margin-bottom; 15px;
+			box-shadow: 1px 1px 5px #330000;
+			border-radius: 5px 5px 5px 5px;
+			transition: all 1s;
+
+		}
 		</style>
 	</head>
 	<body>
