--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -19,6 +19,11 @@
 			});
 		</script>
 		<style>
+			header {
+				color: #ff9900;
+				text-align: center;
+			}
+			
 			body {
 				width: 100%;
 				background: grey;
@@ -45,7 +50,9 @@
 		</style>
 	</head>
 	<body>
-		<p>Hello everyone!</p>
+		<header>
+			<p>Hello everyone!</p>
+		</header>
 		<div class="insta-photos"></div>
 		<p>Thanks for taking a look</p>
 		<p>Bye!</p>
