--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -22,6 +22,7 @@
 			header {
 				color: #ff9900;
 				text-align: center;
+				font-size: 25px;
 			}
 			
 			body {
@@ -50,9 +51,7 @@
 		</style>
 	</head>
 	<body>
-		<header>
-			<p>Hello everyone!</p>
-		</header>
+		<h1>Hello everyone!</h1>
 		<div class="insta-photos"></div>
 		<p>Thanks for taking a look</p>
 		<p>Bye!</p>
