--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -22,7 +22,7 @@
 			h1 {
 				text-align: center;
 				font-size: 25px;
-				color: #ff6600;
+				color: #ffd700;
 			}
 			
 			body {
@@ -40,13 +40,9 @@
 			.insta-photos img{
 				width:200px;
 				height: 142px;
-				display:inline-block;
 				padding: 15px;
 				margin-top; 15px;
 				margin-bottom; 15px;
-				box-shadow: 1px 1px 5px #330000;
-				border-radius: 5px 5px 5px 5px;
-				transition: all 1s;
 			}
 		</style>
 	</head>
