--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -49,9 +49,6 @@
 	<body>
 		<h1>Hello everyone!</h1>
 		<div class="insta-photos"></div>
-		<p>Thanks for taking a look</p>
-		<p>Bye!</p>
-		<p>See you!</p>
-		<p>Test line</p>
+		<p>Thank you for taking a look</p>
 	</body>
 </html>
