--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -28,6 +28,7 @@
 			body {
 				width: 100%;
 				background: grey;
+				text-align: center;
 			}
 			
 			.insta-photos{
@@ -43,6 +44,7 @@
 				padding: 15px;
 				margin-top; 15px;
 				margin-bottom; 15px;
+				border-radius: 50%;
 			}
 		</style>
 	</head>
