--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -44,7 +44,7 @@
 				padding: 15px;
 				margin-top; 15px;
 				margin-bottom; 15px;
-				border-radius: 50%;x`
+				border-radius: 50%;
 			}
 		</style>
 	</head>
