--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>	
 	<head>
+		<link href='http://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
 		<title>Testing!</title>
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script type="text/javascript">
@@ -46,11 +47,20 @@
 				margin-bottom; 15px;
 				border-radius: 50%;
 			}
+			
+			footer {
+				text-align: center;	
+				font-size: 12px;
+				padding-top:10px;
+				padding-bottom:10px;
+			}
 		</style>
 	</head>
 	<body>
-		<h1>Hello everyone!</h1>
+		<h1>HELLO EVERYONE!</h1>
 		<div class="insta-photos"></div>
-		<p>Thank you for taking a look</p>
+		<footer>
+			Thank you for taking a look!
+		</footer>
 	</body>
 </html>
