--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -29,7 +29,7 @@
 			body {
 				width: 100%;
 				background: grey;
-				text-align: center;
+				text-align: #C8C8C8;
 				font-family: 'Muli';
 			}
 			
