--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -28,8 +28,8 @@
 			
 			body {
 				width: 100%;
-				background: grey;
-				text-align: #C8C8C8;
+				background: #C8C8C8;
+				text-align: center;
 				font-family: 'Muli';
 			}
 			
