--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -14,7 +14,7 @@
 					response.data.forEach(function(photo) {
 					console.log(photo);	
 					console.log(photo.link);
-					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
+					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>' + '"<p>Seacula quarta decima et quinta decima Eodem modo typi. Modo typi qui nunc nobis videntur parum clari. Quam littera gothica quam nunc putamus parum claram anteposuerit. Lorem ipsum dolor sit amet, ligula suspendisse nulla pretium, rhoncus tempor placerat fermentum, enim integer ad vestibulum volutpat. Nisl rhoncus turpis est, vel elit, congue wisi enim nunc ultricies sit, magna.</p>'");
 				});
 				},
 			});
