--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -14,7 +14,7 @@
 					response.data.forEach(function(photo) {
 					console.log(photo);	
 					console.log(photo.link);
-					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>"');
+					$('.insta-photos').append('<a href="' + photo.link + '"><img src="' + photo.images.standard_resolution.url + '"></a>');
 				});
 				},
 			});
