--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -29,7 +29,7 @@
 			body {
 				width: 100%;
 				background: #C8C8C8;
-				text-align: center;
+	
 				font-family: 'Muli';
 			}
 			
@@ -47,6 +47,7 @@
 				margin-top; 15px;
 				margin-bottom; 15px;
 				border-radius: 50%;
+				text-align: left;
 			}
 			
 			footer {
