I´ve updated my files

--- a/week-02/Trejo-Jesus/index.html
+++ b/week-02/Trejo-Jesus/index.html
@@ -38,7 +38,7 @@ $.ajax({
 
 
 <body>
-	<div class="header"><h1>Here Are my Instagram Pics</h1></div>
+	<div class="header"><h1>Here are some Instagram Pics</h1></div>
 <div class= "insta-photos">
 	</div>
 <div class="footer"><h2>Thanks for taking a look</h2></div>
