--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -58,10 +58,10 @@
 		</style>
 	</head>
 	<body>
-		<h1>HELLO EVERYONE!</h1>
+		<h1>HELLO EVERYONE!</h1
 		<div class="insta-photos"></div>
 		<footer>
-			Thank you for taking a look!
+			Thank you for taking a look! High five!
 		</footer>
 	</body>
 </html>
