--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -58,7 +58,8 @@
 		</style>
 	</head>
 	<body>
-		<h1>HELLO EVERYONE!</h1
+		<h1>HELLO EVERYONE!</h1>
+		<p>Maria Luisa Chau</p>
 		<div class="insta-photos"></div>
 		<footer>
 			Thank you for taking a look! High five!
