--- a/week-02/chau-maria/index.html
+++ b/week-02/chau-maria/index.html
@@ -8,7 +8,7 @@
 			$.ajax({
 				type: 'GET',
 				dataType: 'jsonp',
-				url: 'https://api.instagram.com/v1/users/230199680/media/recent?client_id=585d00be2af34a26b0e1caa6995cf19f',
+				url: 'https://api.instagram.com/v1/media/popular?client_id=585d00be2af34a26b0e1caa6995cf19f',
 				success: function(response) {
 					console.log(response);
 					response.data.forEach(function(photo) {
