index.html revision
week 2 revisions (css additions).

--- a/week-02/mcpherson-jason/index.html
+++ b/week-02/mcpherson-jason/index.html
@@ -18,6 +18,34 @@
 				},
 			});
 	</script>
+	
+	<style>
+		
+		body{
+			background: #333333;
+		}
+		
+		h1{
+			font-family: Arial, sans-serif;
+			font-size: 50px;
+			text-align: center;
+			margin-top: 25px;
+			margin-bottom: 0px;
+			margin-left: 10px;
+		}
+		
+		p{
+			font-size: 30px;
+			text-align: center;
+		}
+		
+		.insta-photos{
+			 
+			 width: 750px;
+			 margin: auto;
+		}
+		
+	</style>
 	</head>
 <body>
 <h1>Oh, hi. Welcome to my Instagram photos</h1>
