index.html revision

--- a/week-02/mcpherson-jason/index.html
+++ b/week-02/mcpherson-jason/index.html
@@ -32,6 +32,8 @@
 			margin-top: 25px;
 			margin-bottom: 0px;
 			margin-left: 10px;
+			text-decoration: underline;
+			border: 5px solid;
 		}
 		
 		p{
