cha-cha-changes

--- a/week-03/tennant-calvin/index.html
+++ b/week-03/tennant-calvin/index.html
@@ -39,6 +39,7 @@
 					getNextPage();
 				}
 			});
+			$(document).ready(getNextPage);
 
 		</script>
 		<style type="text/css">
@@ -47,6 +48,9 @@
 				min-height: 100%;
 				margin: 0;
 				padding: 0;
+			}
+			.insta-photos img {
+				width: 300px;
 			}
 		</style>
 	</head>
