--- a/week-03/trejo-jesus/index.html
+++ b/week-03/trejo-jesus/index.html
@@ -45,6 +45,7 @@
 		</script>
 		<style type="text/css">
 	
+	@import url(http://fonts.googleapis.com/css?family=Antic+Slab);
 
 		body {
 		 background-color: #DCD8D8;
