--- a/week-04/mun-soeun/index.html
+++ b/week-04/mun-soeun/index.html
@@ -9,8 +9,12 @@
 				margin: 0;
 				padding:0;
 			}
-			h1, h3{
+			h1, h3, p{
 				text-align: center;
+				color: #708090;
+			}
+			p{
+				font-style: italic;
 			}
 		</style>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rABaf_KBbLEY9UI2wiwiOZ8SeFoAZBE&sensor=false"></script>
@@ -48,7 +52,8 @@
 				openWindow(46.8333,8.3333, "Switzerland, Alps and chocolates. Yum!");
 				openWindow(30.0500,31.2333, "Cairo, mummies and pyramids are calling me!");
 				openWindow(51.5072, -0.1275, "London, Beatles and vibrant culture and food!");
-				openWindow();
+				openWindow(35.6895, 139.6917, "Tokyo, a vibrant city that embraces mix of old and new, and hub of high-tech gadgets!");
+				openWindow(-37.8136, 144.9631, "Melbourne, a city of inpsipirational artists, foodies and of course, kangaroos! It would be great to travel on the Great Ocean Road...");
 				
 				/*
 				var toronto = new google.maps.Marker({
@@ -72,6 +77,7 @@
 	<body>
 		<h1> Places I'd love to visit! </h1>
 		<h3> By: So Eun (Esther) Mun</h3>
+		<p> (CLick the markers below to see my comments!) </p>
 		<div id="map-canvas"> </div>
 		
 	</body>
