--- a/week-04/grace-alma/index.html
+++ b/week-04/grace-alma/index.html
@@ -16,6 +16,8 @@
 				font-size: 2.5em;
 				color: #000;
 				margin: 30px;
+				text-align: center;
+				text-shadow:0px 0px 2px #FFFFFF, 2px 2px 2px #333333;
 
 			}
 			
@@ -24,11 +26,13 @@
 				font-size: 1.5em;
 				text-decoration: underline;
 				margin: 30px;
+				text-shadow:0px 0px 2px #FFFFFF, 2px 2px 2px #333333;
 			}
 			
 			h3{
 				font-family:"Times New Roman", Cursive;
-				font-size: 1em;
+				font-size: 1.2em;
+				text-align: center;
 				color: #000088;
 				margin: 30px;
 			
@@ -64,6 +68,7 @@
 				font-size: 1.2em;
 				color: #000088;
 				margin: 30px;
+
 			
 			}
 
@@ -301,6 +306,7 @@ var marker = new MarkerWithLabel({
 	<body>
 	<div class="header">
 		<h1>MY FONDEST MEMORIES</h1>
+		<h3>by Alma Grace</h3>
 	</div>
 	<div id="map-canvas">
 	</div>
