--- a/week-05/trejo-jesus/index.html
+++ b/week-05/trejo-jesus/index.html
@@ -2,45 +2,14 @@
 <html>
 	<head>
 		<title>Week 2, Instagram!</title>
-		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rABaf_KBbLEY9UI2wiwiOZ8SeFoAZBE&sensor=false"></script>
+		<script type="text/javascript" src=""></script>
+		<script type="text/javascript" src=""></script>
 		<script type="text/javascript">
-			navigator.geolocation.getCurrentPosition(function(position) {
-				$.ajax({
-					type: "GET",
-					dataType: "jsonp",
-					cache: false,
-					url: 'https://api.instagram.com/v1/media/search?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude + '&client_id=585d00be2af34a26b0e1caa6995cf19f',
-					success: function(response) {
-						console.log(response);
-						response.data.forEach(function(media) {
-							var latlng = new google.maps.LatLng(media.location.latitude, media.location.longitude);
-							new google.maps.Marker({
-								position: latlng,
-								map: map
-							});
-							var infowindow = new google.maps.InfoWindow({
-								content: 'test'
-							});
-  //google.maps.event.addListener(marker, 'click', function() {
-  //  infowindow.open(map,marker);
-//});
-						});
-					}
-				});
-				var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-				var mapOptions = {
-					center: latlng,
-					zoom: 12
-				};
-				var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-			});
+			
 		</script>
 		
     <style type="text/css">
-      html { height: 100% }
-      body { height: 100%; margin: 0; padding: 0 }
-      #map-canvas { height: 100% }
+     
     </style>
 	</head>
 	<body>
