--- a/week-06/tennant-calvin/index.html
+++ b/week-06/tennant-calvin/index.html
@@ -5,36 +5,53 @@
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rABaf_KBbLEY9UI2wiwiOZ8SeFoAZBE&sensor=false"></script>
 		<script type="text/javascript">
-			navigator.geolocation.getCurrentPosition(function(position) {
+			var map, droppedPin;
+			$(document).ready(function() {
+				map = new google.maps.Map(document.getElementById("map-canvas"), {
+					zoom: 16
+				});
+				google.maps.event.addListener(map, 'click', function(event) {
+					console.log(event.latLng);
+					searchPhotos(event.latLng);
+  				});
+
+				navigator.geolocation.getCurrentPosition(function(position) {
+					searchPhotos(new google.maps.LatLng(position.coords.latitude, position.coords.longitude));
+				});
+			});
+
+			function searchPhotos(latlng) {
+				var openInfowindow;
 				$.ajax({
 					type: "GET",
 					dataType: "jsonp",
 					cache: false,
-					url: 'https://api.instagram.com/v1/media/search?lat=' + position.coords.latitude + '&lng=' + position.coords.longitude + '&client_id=585d00be2af34a26b0e1caa6995cf19f',
+					url: 'https://api.instagram.com/v1/media/search?distance=100&lat=' + latlng.lat() + '&lng=' + latlng.lng() + '&client_id=585d00be2af34a26b0e1caa6995cf19f',
 					success: function(response) {
-						console.log(response);
 						response.data.forEach(function(media) {
 							var latlng = new google.maps.LatLng(media.location.latitude, media.location.longitude);
-							new google.maps.Marker({
+							var marker = new google.maps.Marker({
 								position: latlng,
 								map: map
 							});
 							var infowindow = new google.maps.InfoWindow({
-								content: 'test'
+								content: '<img src="' + media.images.low_resolution.url + '">',
 							});
-  //google.maps.event.addListener(marker, 'click', function() {
-  //  infowindow.open(map,marker);
-//});
+  							google.maps.event.addListener(marker, 'click', function() {
+  								if (openInfowindow) openInfowindow.close();
+  								openInfowindow = infowindow;
+  								infowindow.open(map, marker);
+  							});
 						});
 					}
 				});
-				var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-				var mapOptions = {
-					center: latlng,
-					zoom: 12
-				};
-				var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-			});
+				map.setCenter(latlng);
+				droppedPin = new google.maps.Marker({
+					position: latlng,
+					map: map,
+					animation:google.maps.Animation.BOUNCE
+				});
+			}
 		</script>
 		
     <style type="text/css">
