--- a/week-05/grace-alma/index.html
+++ b/week-05/grace-alma/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-<title>week 5 google maps</title>
+<title>WORLD WONDER OF ALMA GRACE!</title>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rABaf_KBbLEY9UI2wiwiOZ8SeFoAZBE&sensor=false"></script>
 	<script type="text/javascript">
@@ -15,20 +15,69 @@
 		var map = new google.maps.Map($('#map')[0], mapOptions);
 		console.log('testing');
 		var wonders = [
-				{
-			name: '<h2>Pyramids</h2>',
-			description:'<p> The pyramids are old!They\'re big too!</p>',
+		{
+			name: '<h2>Great Pyramid of Giza</h2>',
+			description:'<p> The Great Pyramid of Giza is the oldest and largest of the three pyramids in El Giza, Egypt.The pyramids are old!They\'re big too!</p>',
 			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/e/e3/Kheops-Pyramid.jpg">',
 			lat: '29.9791471',
-			lng: '31.1342029'
+			lng: '31.1342028',
+		
+		},
+		
+		{
+			name: '<h2>Taj Mahal</h2>',
+			description:'<p>The Taj Mahal is a white marble mausoleum located in Agra, Uttar Pradesh, India.</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/thumb/f/f5/Taj_Mahal_2012.jpg/800px-Taj_Mahal_2012.jpg">',
+				
+			lat: '27.175015',
+			lng: '78.042155',
+			
+		},
+		
+		{
+			name: '<h2>Hanging Gardens of Babylon</h2>',
+			description:'<p>Traditionally they were said to have been built in the ancient city of Babylon, near present-day Hillah, Babil province, in Iraq.</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/a/ae/Hanging_Gardens_of_Babylon.jpg">',
+			
+			
+			lat: '32.543618',
+			lng: '44.42408',
+		},
+		
+		{
+			name: '<h2>Lighthouse of Alexandria</h2>',
+			description:'<p>The Lighthouse of Alexandria was a lofty tower built by the Ptolemaic Kingdom between 280 and 247 BC and between 393 and 450 ft.</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Lighthouse_-_Thiersch.gif/705px-Lighthouse_-_Thiersch.gif">',
+			
+			
+			lat: '31.216667',
+			lng: '29.916667',
+		},
+		
+		{
+			name: '<h2>The Great Wall of China</h2>',
+			description:'<p>The Great Wall of China is a series of fortifications made of stone, brick, tamped earth, wood, and other materials, generally built along an east-to-west line across the historical northern borders of China.</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/The_Great_Wall_of_China_at_Jinshanling.jpg/800px-The_Great_Wall_of_China_at_Jinshanling.jpg">',
+			
+			
+			lat: '40.431908',
+			lng: '116.570375',
 		},
 		{
-			name: '<h2>Collosus</h2>',
-			description:'<p> The Colossus of Rhodes </p>',
-			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/5/5f/Colosse_de_Rhodes_%28Barclay%29.jpg">',
-			lat: '36.4355951',
-			lng: '28.2231159',
+			name: '<h2>Temple of Artemis</h2>',
+			description:'<p> The Temple of Artemis is also known less precisely as the Temple of Diana, a Greek temple dedicated to the goddess Artemis</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/a/a9/Temple_of_Artemis.jpg">',
+			lat: '37.950069',
+			lng: '27.365269',
+		},
+		{
+			name: '<h2>Colosseum</h2>',
+			description:'<p>The Colosseum is an elliptical amphitheatre in the centre of the city of Rome, Italy.</p>',
+			image: '<img height="100" src="http://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Colosseum_in_Rome%2C_Italy_-_April_2007.jpg/800px-Colosseum_in_Rome%2C_Italy_-_April_2007.jpg">',
+			lat: '41.89021',
+			lng: '12.492231',
 		}
+		
 
 		
 		
@@ -37,26 +86,26 @@
 			wonders.forEach(function(wonder) {
 
 
-		var latlng = new google.maps.LatLng(wonder.lat, wonder.lng);
-		var marker = new google.maps.Marker({
+			var latlng = new google.maps.LatLng(wonder.lat, wonder.lng);
+			var marker = new google.maps.Marker({
 			position: latlng,
 			map: map,
 			
 		
 		});
 		
-		var infowindow = new google.maps.InfoWindow({
+			var infowindow = new google.maps.InfoWindow({
 			content: wonder.name + wonder.image + wonder.description
 						
-		});
-		google.maps.event.addListener(marker, 'click', function() {
+			});
+			google.maps.event.addListener(marker, 'click', function() {
 			infowindow.open(map, marker);
 			map.setCenter(marker.position);
 			map.setZoom(12);
 			
+			});
 		});
-				});
-		});
+	});
 
 	</script>
 	<style type="text/css">
