--- a/week-07/gonzalez-ada/index.html
+++ b/week-07/gonzalez-ada/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Week 6!</title>
+		<title>Week 7!</title>
 		<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD9rABaf_KBbLEY9UI2wiwiOZ8SeFoAZBE&sensor=false"></script>
 		<script>
@@ -98,10 +98,12 @@
 		</script>
 		<style type="text/css">
 		html, body, #map-canvas { 
-		height: 100%;
-		margin:0;
+		height: 98%;
+	 	margin-left: auto;
+   	 	margin-right: auto;
+		background-color:#636363;
 		padding:0;
-		width:100%;
+		width:98%;
 
 		
 		}
@@ -119,10 +121,11 @@
 			text-align:center;
 			color: white;
 			height: 100px;
-			padding: 5px;
+			padding: 2px;
 			position: absolute;
 			width: 100%;
-			bottom: 50px
+			bottom: -70px;
+			
 		}
 		
 		.picture {
@@ -133,15 +136,21 @@
 					border-style:solid;
 					border-color:white;
 					border-width:4px;	
-					bottom:120px;							
+					bottom:150px;							
 
 	}
 
+h1 {
+	text-align: center;
+	color: #ffffff;
+	font-family: "Arial", helvetica, verdana;
+}
 
 		</style>
 		
 	</head>
 	<body>
-		<div id="map-canvas"></div>
+	<h1> Google Maps and Instagram </h1>
+			<div id="map-canvas"></div>
 	</body>
 </html>
